--- a/ingress.yaml
+++ b/ingress.yaml
@@ -27,5 +27,5 @@ spec:
         paths:
           - path: /
             backend:
-              serviceName: wekan
+              serviceName: wekan-service
               servicePort: 8080
