--- a/wekan.yaml
+++ b/wekan.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: wekan-app
+  name: wekan
 spec:
   selector:
     matchLabels:
@@ -17,7 +17,7 @@ spec:
           image: wekanteam/wekan:v4.17
           env:
             - name: MONGO_URL
-              value: mongodb://mongodb-service:27017/wekan
+              value: mongodb://mongodb/wekan
             - name: ROOT_URL
               value: https://kanban.mhemeryck.com
           ports:
@@ -26,7 +26,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: wekan-service
+  name: wekan
 spec:
   selector:
     app: wekan
