--- a/ingress.yaml
+++ b/ingress.yaml
@@ -15,6 +15,9 @@ spec:
     - hosts:
         - wekan.mhemeryck.com
       secretName: wekan-mhemeryck-com-tls
+    - hosts:
+        - grafana.mhemeryck.com
+      secretName: grafana-mhemeryck-com-tls
   rules:
     - host: cv.mhemeryck.com
       http: &cv_http
@@ -29,4 +32,10 @@ spec:
         paths:
           - backend:
               serviceName: wekan
+              servicePort: 80
+    - host: grafana.mhemeryck.com
+      http:
+        paths:
+          - backend:
+              serviceName: prometheus-grafana
               servicePort: 80
