--- a/cvsite.yaml
+++ b/cvsite.yaml
@@ -15,13 +15,46 @@ spec:
       containers:
         - name: cvsite
           image: mhemeryck/cvsite:latest
+        - name: cvsite-prometheus-exporter
+          image: nginx/nginx-prometheus-exporter:0.8.0
+          env:
+            - name: SCRAPE_URI
+              value: http://localhost/metrics
+            - name: TELEMETRY_PATH
+              value: /metrics
+            - name: NGINX_RETRIES
+              value: "10"
+          ports:
+            - containerPort: 9113
 ---
-kind: Service
 apiVersion: v1
+kind: Service
 metadata:
   name: cvsite
+  labels:
+    app: cvsite
 spec:
   selector:
     app: cvsite
   ports:
-    - port: 80
+    - name: web
+      port: 80
+    - name: metrics
+      port: 9113
+---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: cvsite-monitor
+  labels:
+    app: cvsite
+    release: prometheus
+spec:
+  selector:
+    matchLabels:
+      app: cvsite
+  namespaceSelector:
+    any: true
+  endpoints:
+    - port: metrics
+      interval: 15s
