--- a/ingress.yaml
+++ b/ingress.yaml
@@ -15,6 +15,12 @@ spec:
     - hosts:
         - wekan.mhemeryck.com
       secretName: wekan-mhemeryck-com-tls
+    - hosts:
+        - grafana.mhemeryck.com
+      secretName: grafana-mhemeryck-com-tls
+    - hosts:
+        - prometheus.mhemeryck.com
+      secretName: prometheus-mhemeryck-com-tls
   rules:
     - host: cv.mhemeryck.com
       http: &cv_http
@@ -30,3 +36,15 @@ spec:
           - backend:
               serviceName: wekan
               servicePort: 80
+    - host: grafana.mhemeryck.com
+      http:
+        paths:
+          - backend:
+              serviceName: prometheus-grafana
+              servicePort: 80
+    - host: prometheus.mhemeryck.com
+      http:
+        paths:
+          - backend:
+              serviceName: prometheus-prometheus-oper-prometheus
+              servicePort: 9090
