--- a/issuer-letsencrypt-staging.yaml
+++ b/issuer-letsencrypt-staging.yaml
@@ -1,21 +1,14 @@
-apiVersion: cert-manager.io/v1alpha2
-kind: Issuer
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
 metadata:
   name: letsencrypt-staging
-  namespace: default
 spec:
   acme:
-    # The ACME server URL
     server: https://acme-staging-v02.api.letsencrypt.org/directory
-    # Email address used for ACME registration
     email: martijn.hemeryck@gmail.com
-    # Name of a secret used to store the ACME account private key
     privateKeySecretRef:
       name: letsencrypt-staging
-    # Enable the HTTP-01 challenge provider
     solvers:
-      # An empty 'selector' means that this solver matches all domains
-      - selector: {}
-        http01:
+      - http01:
           ingress:
             class: traefik
