--- a/mastodon.yaml
+++ b/mastodon.yaml
@@ -35,7 +35,7 @@ spec:
           image: postgres:15.1-alpine3.16
           resources:
             limits:
-              memory: 512Mi
+              memory: 1Gi
           ports:
             - containerPort: 5432
           volumeMounts:
@@ -63,54 +63,36 @@ spec:
     - port: 5432
       targetPort: 5432
 
-# mongo
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mastodon-mongodb
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 1Gi
+# redis
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: mastodon-mongodb
+  name: mastodon-redis
 spec:
   selector:
     matchLabels:
-      app: mastodon-mongodb
-  serviceName: mastodon-mongodb
+      app: mastodon-redis
+  serviceName: mastodon-redis
   replicas: 1
   template:
     metadata:
       labels:
-        app: mastodon-mongodb
+        app: mastodon-redis
     spec:
       containers:
-        - name: mastodon-mongodb
-          image: mongo:4.2.23-bionic
-          volumeMounts:
-            - name: mastodon-mongodb
-              mountPath: /data/db
-      volumes:
-        - name: mastodon-mongodb
-          persistentVolumeClaim:
-            claimName: mastodon-mongodb
+        - name: mastodon-redis
+          image: redis:7-alpine
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: mastodon-mongodb
+  name: mastodon-redis
 spec:
   selector:
-    app: mastodon-mongodb
+    app: mastodon-redis
   ports:
-    - port: 27017
+    - port: 6379
 
 # web
 ---
@@ -132,12 +114,11 @@ spec:
           image: tootsuite/mastodon:v3.5.4
           ports:
             - containerPort: 3000
-          command: ["/bin/sh"]
           env:
             - name: LOCAL_DOMAIN
-              value: localhost
+              value: mastodon.mhemeryck.com
             - name: REDIS_HOST
-              value: redis
+              value: mastodon-redis
             - name: REDIS_PORT
               value: "6379"
             - name: DB_HOST
@@ -177,6 +158,7 @@ spec:
               value: "31556952"
             - name: SESSION_RETENTION_PERIOD
               value: "31556952"
+          command: ["/bin/sh"]
           args:
             - -c
             - |
