--- a/mastodon.yaml
+++ b/mastodon.yaml
@@ -94,6 +94,25 @@ spec:
   ports:
     - port: 6379
 
+# shared web config
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: mastodon
+data:
+  LOCAL_DOMAIN: mastodon.mhemeryck.com
+  REDIS_HOST: mastodon-redis
+  REDIS_PORT: "6379"
+  DB_HOST: mastodon-postgres
+  DB_USER: mastodon
+  DB_PORT: "5432"
+  DB_NAME: mastodon
+  IP_RETENTION_PERIOD: "31556952"
+  SESSION_RETENTION_PERIOD: "31556952"
+  SMTP_SERVER: smtp.sendgrid.net
+  SMTP_PORT: "587"
+
 # web
 ---
 apiVersion: apps/v1
@@ -114,64 +133,11 @@ spec:
           image: tootsuite/mastodon:v3.5.4
           ports:
             - containerPort: 3000
-          env:
-            - name: LOCAL_DOMAIN
-              value: mastodon.mhemeryck.com
-            - name: REDIS_HOST
-              value: mastodon-redis
-            - name: REDIS_PORT
-              value: "6379"
-            - name: DB_HOST
-              value: mastodon-postgres
-            - name: DB_USER
-              value: mastodon
-            - name: DB_PASS
-              valueFrom:
-                secretKeyRef:
-                  name: mastodon
-                  key: postgres_password
-            - name: DB_PORT
-              value: "5432"
-            - name: DB_NAME
-              value: mastodon
-            - name: SECRET_KEY_BASE
-              valueFrom:
-                secretKeyRef:
-                  name: mastodon
-                  key: web_secret_key_base
-            - name: OTP_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: mastodon
-                  key: web_otp_secret
-            - name: VAPID_PRIVATE_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: mastodon
-                  key: web_vapid_private_key
-            - name: VAPID_PUBLIC_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: mastodon
-                  key: web_vapid_public_key
-            - name: IP_RETENTION_PERIOD
-              value: "31556952"
-            - name: SESSION_RETENTION_PERIOD
-              value: "31556952"
-            - name: SMTP_SERVER
-              value: smtp.sendgrid.net
-            - name: SMTP_PORT
-              value: "587"
-            - name: SMTP_LOGIN
-              valueFrom:
-                secretKeyRef:
-                  name: mastodon
-                  key: sendgrid_smtp_login
-            - name: SMTP_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: mastodon
-                  key: sendgrid_smtp_password
+          envFrom:
+            - configMapRef:
+                name: mastodon
+            - secretRef:
+                name: mastodon
           command: ["/bin/sh"]
           args:
             - -c
