--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,3 @@
 export TF_VAR_do_token=`pass show home/digitalocean_token`
 export TF_VAR_hcloud_token=`pass show hcloud_token`
+export TF_VAR_hetzner_dns_token=`pass show hetzner_dns_token`
