--- a/cvsite.yaml
+++ b/cvsite.yaml
@@ -42,17 +42,17 @@ metadata:
   name: web
   namespace: cvsite
   annotations:
-    kubernetes.io/ingress.class: traefik
+    kubernetes.io/ingress.className: traefik
     cert-manager.io/cluster-issuer: letsencrypt
     ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   tls:
     - hosts:
-        - cv.mhemeryck.com
-        - mhemeryck.com
+        - cv.mhemeryck.xyz
+        - mhemeryck.xyz
       secretName: cv-mhemeryck-com-tls
   rules:
-    - host: cv.mhemeryck.com
+    - host: cv.mhemeryck.xyz
       http: &cv_http
         paths:
           - pathType: ImplementationSpecific
@@ -61,5 +61,5 @@ spec:
                 name: cvsite
                 port:
                   number: 80
-    - host: mhemeryck.com
+    - host: mhemeryck.xyz
       http: *cv_http
