--- a/cvsite.yaml
+++ b/cvsite.yaml
@@ -43,14 +43,14 @@ metadata:
   namespace: cvsite
   annotations:
     kubernetes.io/ingress.className: traefik
-    cert-manager.io/cluster-issuer: letsencrypt
+    cert-manager.io/cluster-issuer: letsencrypt-staging
     ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   tls:
     - hosts:
         - cv.mhemeryck.xyz
         - mhemeryck.xyz
-      secretName: cv-mhemeryck-com-tls
+      secretName: cv-mhemeryck-xyz-tls
   rules:
     - host: cv.mhemeryck.xyz
       http: &cv_http
