--- a/wekan.yaml
+++ b/wekan.yaml
@@ -1,8 +1,13 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: wekan
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: wekan
+  namespace: wekan
 spec:
   selector:
     matchLabels:
@@ -27,6 +32,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: wekan
+  namespace: wekan
 spec:
   selector:
     app: wekan
