--- a/postgres.yaml
+++ b/postgres.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgres-pgdata
+  namespace: bitwarden
 spec:
   accessModes:
     - ReadWriteOnce
@@ -14,6 +15,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: postgres
+  namespace: bitwarden
 spec:
   selector:
     matchLabels:
@@ -31,7 +33,7 @@ spec:
             claimName: postgres-pgdata
       containers:
         - name: postgres
-          image: postgres:15.0-alpine3.16
+          image: postgres:16.3-alpine3.20
           resources:
             limits:
               memory: 512Mi
@@ -51,6 +53,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres
+  namespace: bitwarden
 spec:
   selector:
     app: postgres
