--- a/bitwarden.yaml
+++ b/bitwarden.yaml
@@ -154,7 +154,7 @@ metadata:
   namespace: bitwarden
   annotations:
     kubernetes.io/ingress.className: traefik
-    cert-manager.io/cluster-issuer: letsencrypt-staging
+    cert-manager.io/cluster-issuer: letsencrypt
     ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   tls:
