update ingress to prod

--- a/cvsite.yaml
+++ b/cvsite.yaml
@@ -44,7 +44,7 @@ metadata:
   namespace: cvsite
   annotations:
     kubernetes.io/ingress.className: traefik
-    cert-manager.io/cluster-issuer: letsencrypt-staging
+    cert-manager.io/cluster-issuer: letsencrypt
     ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   tls:
